manifests/mianju-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mianju-service
spec:
  type: LoadBalancer
  selector:
    app: mianju-deployment-app
  ports:
  - port: 80
    targetPort: 3000
