manifests/ziwo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ziwo-service
spec:
  type: LoadBalancer
  selector:
    app: ziwo-deployment-app
  ports:
  - port: 80
    targetPort: 8080
